--- a/config.production.json
+++ b/config.production.json
@@ -1,5 +1,5 @@
 {
-    "url": "process.env.URL",
+    "url": "http://localhost:2368",
     "database": {
         "client": "mysql",
         "connection": {
