Maj Localhost morning & café

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-URL=https://kind-prisca-wander-53b6725f.koyeb.app/
+URL=http://localhost:2368
 DATABASE_HOST=mysql-wander.alwaysdata.net
 DATABASE_USER=wander
 DATABASE_PASSWORD=rangiroa
